# ShaMu

./: README.html  README.md
shamu/files/: auth.py  gcode_hook.py  server.py
shamu_complete/shamu/: README.md  pyproject.toml
shamu_complete/shamu/addons/example_ai_addon/: addon_ai_advisor.py
shamu_complete/shamu/shamu/: __init__.py  config_manager.py  connection_manager.py
